# Neun-Example-J

./: .gitignore  CMakeLists.txt  HR.cpp  README.md  chemicalSynapsis.cpp  plot.py
circuitos/: CMakeLists.txt  cpg_completo.cpp  n1-2-3.cpp  n1-2.cpp
neuronas/: CGC.cpp  CMakeLists.txt  N1.cpp  N2.cpp  N3.cpp  SO.cpp
previo/: CMakeLists.txt  requirements.txt
